--- a/backend/package.json
+++ b/backend/package.json
@@ -12,19 +12,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
     "@types/express-ws": "^3.0.5",
     "@types/node": "^22.15.2",
+    "@types/twilio": "^3.19.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express-ws": "^5.0.2",
     "openai": "^4.96.0",
+    "twilio": "^5.5.2",
     "wavefile": "^11.0.0"
   }
 }
