--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-slot": "^1.1.1",
+    "@videosdk.live/videosdk-media-processor-web": "^0.0.19",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
