--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,15 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express-ws": "^5.0.2",
+    "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.96.0",
+    "rnnoise-wasm": "^0.0.1-security",
     "twilio": "^5.5.2",
-    "wavefile": "^11.0.0"
+    "wavefile": "^11.0.0",
+    "webm-muxer": "^1.2.0"
   }
 }
